@@ -52,10 +52,10 @@ struct binary_info {
 };
 
 static void change_load_filename( GtkButton *button, gpointer user_data );
-static void load_data( GtkButton *button, gpointer user_data );
+static void load_data( GtkEntry *entry, gpointer user_data );
 
 static void change_save_filename( GtkButton *button, gpointer user_data );
-static void save_data( GtkButton *button, gpointer user_data );
+static void save_data( GtkEntry *entry, gpointer user_data );
 
 void
 create_binary_dialog( struct binary_info *info, const char *title )
@@ -215,7 +215,7 @@ change_load_filename( GtkButton *button GCC_UNUSED, gpointer user_data )
 }
 
 static void
-load_data( GtkButton *button GCC_UNUSED, gpointer user_data )
+load_data( GtkEntry *entry GCC_UNUSED, gpointer user_data )
 {
   struct binary_info *info = user_data;
 
@@ -298,7 +298,7 @@ change_save_filename( GtkButton *button GCC_UNUSED, gpointer user_data )
 }
 
 static void
-save_data( GtkButton *button GCC_UNUSED, gpointer user_data )
+save_data( GtkEntry *entry GCC_UNUSED, gpointer user_data )
 {
   struct binary_info *info = user_data;
 
